--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,37 @@
 body{
     background-image: url("https://beiz.jp/images_P/sky/sky_00165.jpg");
     background-size: cover;
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    margin-top: 250px;
+}
+
+h1{
+    font-size: 48px;
+    border: 4px solid black;
+    border-radius: 10px;
+    margin: 0 30%;
+    padding: 5px 5px;
+    cursor: pointer;
+}
+
+h2{
+    font-size: 48px;
+    margin: 20px 30%;
+    padding: 5px 5px;
+}
+
+#back{
+    display: block;
+    font-size: 36px;
+    cursor: pointer;
+    border: 4px solid black;
+    border-radius: 10px;
+    margin: 100px 35%;
+    text-decoration: none;
+}
+
+.level{
+    font-size: 20px;
+
 }
